# tinypy

./: README.md  pyproject.toml  ref_tokenize.py  test.sh
.github/workflows/: test.yml
examples/: arithmetic.py  assignment.py  basic-functions.py  comments.py  conditions-2.py  conditions.py  equality.py  expression-statements.py  fibonacci.py  logical-operators.py  newlines.py  reassignment.py  statements.py  strings.py  variable-statements.py  variables.py
src/tinypy/: __init__.py  interpreter.py  parser.py  tokenizer.py
tests/: test_everything.py  test_interpreter.py  test_parser.py  test_tokenizer.py
