[project]
name = "tinypy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James Parsloe", email = "jamesparsloe@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
tinypy = "tinypy:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
